k8s/base/redis-slave-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-follower
  namespace: guestbook
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis, role: follower, tier: backend }
  template:
    metadata:
      labels: { app: redis, role: follower, tier: backend }
    spec:
      containers:
      - name: follower
        image: redis:6-alpine
        args: ["--appendonly","yes","--replicaof","redis-leader","6379"]
        ports:
        - containerPort: 6379
        readinessProbe: { tcpSocket: { port: 6379 }, initialDelaySeconds: 3, periodSeconds: 5 }
